--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
     <title>Etch-A-Sketch</title>
-   <link rel="stylesheet" href="style.css" type="text/css" media="screen" title="no title" charset="utf-8"> 
-  </head>
-  <body>
-    <div id="container"> </div>
+    <link rel="stylesheet" href="style.css" type="text/css" media="screen" title="no title" charset="utf-8">
+</head>
+
+<body>
+    <button type="button" onclick="restart()">Restart</button>
+    <div class="container"> </div>
     <script charset="utf-8" src="script.js"></script>
-  </body>
+</body>
+
 </html>
